--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ git+git://github.com/google/chatbase-python.git
 hachoir
 numpy
 Pillow
+pySmartDL
 https://github.com/pyrogram/pyrogram/archive/asyncio.zip
 requests
 tgcrypto
