--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ hachoir
 numpy
 Pillow
 pySmartDL
-https://github.com/pyrogram/pyrogram/archive/asyncio.zip
-requests
+https://github.com/pyrogram/pyrogram/archive/asyncio-dev.zip
 tgcrypto
-youtube-dl
+git+https://github.com/FaArIsH/youtube-dl
