--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ Pillow
 pySmartDL
 https://github.com/Mahesh0253/pyrogram/archive/asyncio.zip
 tgcrypto
-git+https://github.com/FaArIsH/youtube-dl
+git+https://github.com/Gwenstephanie/youtube-dl
