--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ git+git://github.com/google/chatbase-python.git
 hachoir
 numpy
 Pillow
+sqlalchemy==1.3.19
 https://github.com/mahesh0253/pyrogram/archive/asyncio.zip
 requests
 tgcrypto
