--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ hachoir
 numpy
 Pillow
 sqlalchemy==1.3.19
-https://github.com/mahesh0253/pyrogram/archive/asyncio.zip
+pyrogram
 requests
 tgcrypto
 youtube-dl==2021.12.17
